# bubbl

./: .bochsrc  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  config.mk  env.sh  flake.nix
cmake/: properties.cmake  run.cmake  toolchain.cmake
kernel/: CMakeLists.txt  Makefile
kernel/arch/x86/: link.ld
kernel/arch/x86/init/: boot.s  crti.s  crtn.s
kernel/boot/: gdt.c  gdt.s  grub.cfg  link.ld  linker.ld
kernel/boot/gdt/: gdt.c  gdt.cc  gdt.s
kernel/boot/idt/: exceptions.cc  idt.cc  isr.s
kernel/boot/init/: boot.s  crti.s  crtn.s
kernel/boot/interrupts/: exceptions.c  exceptions.cc  idt.c  idt.cc  interrupts.c  interrupts.cc  isr.s
kernel/cmake/: toolchain.cmake
kernel/drivers/: serial.c  serial.cc  vga_text_buffer.c  vga_text_buffer.cc
kernel/drivers/serial/: serial.c
kernel/drivers/vga_text_buffer/: vga_text_buffer.c
kernel/include/: common.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h
kernel/include/boot/: gdt.h  idt.h  interrupts.h
kernel/include/driver/: vga_text_buffer.h
kernel/include/drivers/: serial.h  vga_text_buffer.h
kernel/include/kernel/: halt.h  io.h  spinlock.h
kernel/include/libk/: io.h  kmalloc.h  liballoc.h  stdio.h  string.h
kernel/include/mm/: memory_map.h  multiboot.h  page_table_allocator.h  physical.h  physical_mm.h  virtual_mm.h
kernel/kernel/: halt.c  halt.cc  io.c  kernel.c  kernel.cc  spinlock.c  spinlock.cc  stack_smashing_protector.c  stack_smashing_protector.cc
kernel/kernel/stack_smashing_protector/: stack_smashing_protector.c
kernel/libk/: kmalloc.c  kmalloc.cc  liballoc.c  liballoc.cc  memset.c  printf.c  printf.cc  printk.c  printk.cc  strlen.c  strlen.cc
kernel/mm/: memory_map.c  memory_map.cc
kernel/mm/physical_mm/: allocation.c  bitmap.c  bitmap.cc  initialization.c  memory_map.c  memory_map.cc  physical_mm.c  physical_mm.cc
kernel/mm/virtual_mm/: page_table_allocator.c  page_table_allocator.cc  pages.c  pages.cc  virtual_mm.c  virtual_mm.cc
make/: utils.mk
scripts/: build-toolchain.sh  fetch-toolchain.sh  package-toolchain.sh
toolchain/: Makefile  binutils.mk  cc.mk  constants.mk  coreutils.mk  cross_binutils.mk  cross_gcc.mk  host_binutils.mk  host_gcc.mk  hostbinutils.mk  hostcc.mk  utils.mk
toolchain/cross/: binutils.mk  gcc.mk  make_toolchain.sh
toolchain/host/: binutils.mk  coreutils.mk  gcc.mk
